api_versioned_docs/version-12.1.2/avalonia/x11platformoptions.mdx
---
title: 'X11PlatformOptions'
hide_title: true
slug: '/avalonia/x11platformoptions'
uid: 'Avalonia.X11PlatformOptions'
commentId: 'T:Avalonia.X11PlatformOptions'
docset: 'avalonia-docs'
packageId: 'Avalonia.X11'
assembly: 'Avalonia.X11'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">X11PlatformOptions Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.X11</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.X11</code>
</div>
</div>

<div className="apiref-page__lead">

Platform-specific options which apply to Linux.

</div>

<div className="apiref-page__signature">

```csharp
public class X11PlatformOptions
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> X11PlatformOptions
</div>
</div>

## Constructors

| Name | Description |
| --- | --- |
| [X11PlatformOptions](#uid-588c114393) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-588c114393"></span>

### X11PlatformOptions Constructor

```csharp
public X11PlatformOptions()
```

</section>

## Properties

| Name | Description |
| --- | --- |
| [EnableDrawnDecorations](#uid-74eb15252c) | Enables client-side drawn window decorations on X11. When true and ExtendClientAreaToDecorationsHint is set on a window, Avalonia will draw its own decorations (titlebar, borders, resize grips) instead of using the X11 window manager decorations. |
| [EnableIme](#uid-207077efd0) | Determines whether to use IME. IME would be enabled by default if the current user input language is one of the following: Mandarin, Japanese, Vietnamese or Korean. |
| [EnableInputFocusProxy](#uid-67a20d0c32) | Determines whether to use Input Focus Proxy. The default value is false. |
| [EnableMultiTouch](#uid-4065ae489e) | Enables multitouch support. The default value is true. |
| [EnableSessionManagement](#uid-7ec896d638) | Determines whether to enable support for the X Session Management Protocol. |
| [ExternalGLibMainLoopExceptionLogger](#uid-61102a9820) | If Avalonia is in control of a run loop, we propagate exceptions by stopping the run loop frame and rethrowing an exception. However, if there is no Avalonia-controlled run loop frame, there is no way to report such exceptions, since allowing those to escape native-&gt;managed call boundary will likely brick GLib machinery since it's not aware of managed Exceptions This property allows to inspect such exceptions before they will be ignored |
| [ForceDrawnDecorations](#uid-aec79283c7) | Forces client-side drawn window decorations on X11 for all windows, even when the app has not opted in via ExtendClientAreaToDecorationsHint. In this mode, Window.ClientSize reflects the usable content area (platform client size minus decoration margins) and the app is unaware of the decorations. Implies EnableDrawnDecorations = true. |
| [GlProfiles](#uid-9d2c834088) | No summary available. |
| [GlxRendererBlacklist](#uid-e68483e0ce) | No summary available. |
| [OverlayPopups](#uid-bb565b2ba8) | Embeds popups to the window when set to true. The default value is false. |
| [RenderingMode](#uid-1eb188c693) | Gets or sets Avalonia rendering modes with fallbacks. The first element in the array has the highest priority. The default value is: [Avalonia.X11RenderingMode.Glx](xref:Avalonia.X11RenderingMode.Glx), [Avalonia.X11RenderingMode.Software](xref:Avalonia.X11RenderingMode.Software). |
| [ShouldRenderOnUIThread](#uid-82559e476f) | Render directly on the UI thread instead of using a dedicated render thread. This can be usable if your device don't have multiple cores to begin with. This setting is false by default. |
| [UseDBusFilePicker](#uid-2ea5009019) | Enables DBus file picker instead of GTK. The default value is true. |
| [UseDBusMenu](#uid-d169320b9a) | Enables global menu support on Linux desktop environments where it's supported (e. g. XFCE and MATE with plugin, KDE, etc). The default value is true. |
| [UseGLibMainLoop](#uid-d79a79f8ea) | If this option is set to true, GMainLoop and GSource based dispatcher implementation will be used instead of epoll-based one. Use this if you need to use GLib-based libraries on the main thread |
| [UseRetainedFramebuffer](#uid-4179d7f252) | Retain window framebuffer contents if using CPU rendering mode. This will keep an offscreen bitmap for each window with contents of the previous frame While improving performance by saving a blit, it will increase memory consumption if you have many windows |
| [WmClass](#uid-101d63096a) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-74eb15252c"></span>

### EnableDrawnDecorations Property

Enables client-side drawn window decorations on X11.
When true and ExtendClientAreaToDecorationsHint is set on a window,
Avalonia will draw its own decorations (titlebar, borders, resize grips)
instead of using the X11 window manager decorations.

```csharp
public Nullable<bool> EnableDrawnDecorations { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-207077efd0"></span>

### EnableIme Property

Determines whether to use IME.
IME would be enabled by default if the current user input language is one of the following: Mandarin, Japanese, Vietnamese or Korean.

```csharp
public Nullable<bool> EnableIme { get; set; }
```

#### Remarks

Input method editor is a component that enables users to generate characters not natively available
on their input devices by using sequences of characters or mouse operations that are natively available on their input devices.

</section>

<section className="apiref-page__member-entry">

<span id="uid-67a20d0c32"></span>

### EnableInputFocusProxy Property

Determines whether to use Input Focus Proxy.
The default value is false.

```csharp
public bool EnableInputFocusProxy { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-4065ae489e"></span>

### EnableMultiTouch Property

Enables multitouch support. The default value is true.

```csharp
public Nullable<bool> EnableMultiTouch { get; set; }
```

#### Remarks

Multitouch allows a surface (a touchpad or touchscreen) to recognize the presence of more than one point of contact with the surface at the same time.

</section>

<section className="apiref-page__member-entry">

<span id="uid-7ec896d638"></span>

### EnableSessionManagement Property

Determines whether to enable support for the
X Session Management Protocol.

```csharp
public bool EnableSessionManagement { get; set; }
```

#### Remarks

X Session Management Protocol is a standard implemented on most
Linux systems that uses Xorg. This enables apps to control how they
can control and/or cancel the pending shutdown requested by the user.

</section>

<section className="apiref-page__member-entry">

<span id="uid-61102a9820"></span>

### ExternalGLibMainLoopExceptionLogger Property

If Avalonia is in control of a run loop, we propagate exceptions by stopping the run loop frame
and rethrowing an exception. However, if there is no Avalonia-controlled run loop frame,
there is no way to report such exceptions, since allowing those to escape native-&gt;managed call boundary
will likely brick GLib machinery since it's not aware of managed Exceptions
This property allows to inspect such exceptions before they will be ignored

```csharp
public Action<Exception> ExternalGLibMainLoopExceptionLogger { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-aec79283c7"></span>

### ForceDrawnDecorations Property

Forces client-side drawn window decorations on X11 for all windows,
even when the app has not opted in via ExtendClientAreaToDecorationsHint.
In this mode, Window.ClientSize reflects the usable content area
(platform client size minus decoration margins) and the app is unaware
of the decorations.
Implies EnableDrawnDecorations = true.

```csharp
public bool ForceDrawnDecorations { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-9d2c834088"></span>

### GlProfiles Property

```csharp
public System.Collections.Generic.IList<Avalonia.OpenGL.GlVersion> GlProfiles { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-e68483e0ce"></span>

### GlxRendererBlacklist Property

```csharp
public System.Collections.Generic.IList<string> GlxRendererBlacklist { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-bb565b2ba8"></span>

### OverlayPopups Property

Embeds popups to the window when set to true. The default value is false.

```csharp
public bool OverlayPopups { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-1eb188c693"></span>

### RenderingMode Property

Gets or sets Avalonia rendering modes with fallbacks.
The first element in the array has the highest priority.
The default value is: [Avalonia.X11RenderingMode.Glx](xref:Avalonia.X11RenderingMode.Glx), [Avalonia.X11RenderingMode.Software](xref:Avalonia.X11RenderingMode.Software).

```csharp
public System.Collections.Generic.IReadOnlyList<Avalonia.X11RenderingMode> RenderingMode { get; set; }
```

#### Remarks

If application should work on as wide range of devices as possible, at least add [Avalonia.X11RenderingMode.Software](xref:Avalonia.X11RenderingMode.Software) as a fallback value.

#### Exceptions

- [Thrown if no values were matched.](xref:System.InvalidOperationException)

</section>

<section className="apiref-page__member-entry">

<span id="uid-82559e476f"></span>

### ShouldRenderOnUIThread Property

Render directly on the UI thread instead of using a dedicated render thread.
This can be usable if your device don't have multiple cores to begin with.
This setting is false by default.

```csharp
public bool ShouldRenderOnUIThread { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-2ea5009019"></span>

### UseDBusFilePicker Property

Enables DBus file picker instead of GTK.
The default value is true.

```csharp
public bool UseDBusFilePicker { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-d169320b9a"></span>

### UseDBusMenu Property

Enables global menu support on Linux desktop environments where it's supported (e. g. XFCE and MATE with plugin, KDE, etc).
The default value is true.

```csharp
public bool UseDBusMenu { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-d79a79f8ea"></span>

### UseGLibMainLoop Property

If this option is set to true, GMainLoop and GSource based dispatcher implementation will be used instead
of epoll-based one.
Use this if you need to use GLib-based libraries on the main thread

```csharp
public bool UseGLibMainLoop { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-4179d7f252"></span>

### UseRetainedFramebuffer Property

Retain window framebuffer contents if using CPU rendering mode.
This will keep an offscreen bitmap for each window with contents of the previous frame
While improving performance by saving a blit, it will increase memory consumption
if you have many windows

```csharp
public Nullable<bool> UseRetainedFramebuffer { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-101d63096a"></span>

### WmClass Property

```csharp
public string WmClass { get; set; }
```

</section>

</ApiRefPage>

